--- a/exploracao.html
+++ b/exploracao.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPA Universe</title>
-    <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,100;1,400&display=swap" rel="stylesheet">
 </head>
-<body class="img-background-1">
+<body class="img-background-3">
     
     <header>
         <nav class="wrapper">
